2008-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/welcome-wizard.glade:
	  Make first page less scary.  Fixes #1122.

2008-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/process.py:
	  Document and make SystemError correct.

2008-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/assistant/scenarios.py:
	  Make scenario descriptions consistent.  Fixes #1123.

2008-08-29  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/common/netutils.py:
	  Changes to support Solaris.

2008-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/bouncers/Makefile.am:
	  Properly package ipbouncer.xml so make distcheck works again.

2008-08-29  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/plugs/plugs.xml:
	  Socket name have to follow the style guide.

2008-08-29  Pedro Gracia  <pedro@flumotion.com>

	reviewed by: Arek Korbik  <arkadini@gmail.com> 

	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/plugs/Makefile.am:
	* flumotion/component/plugs/plugs.xml:
	* flumotion/component/plugs/rrd.py:
	  Streamers can write RRD files directly with this plug.
	  Fixes #1111.

2008-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/eventcalendar.py:
	  Fix repr interpolation.
	  Makes FLU_DEBUG=4 trial
	  flumotion.test.test_component_base_scheduler.SchedulerTest
	  not fail.

2008-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/main.py:
	  Fix comment.

2008-08-28  Johan Dahlin  <johan@flumotion.com>

	* flumotion/manager/config.py:
	* flumotion/test/test_manager_config.py: